Do not trigger role change on textfield from size or aria-haspopup change

Some screen readers watch for unique id changes as the user edits a textfield,
so we need to be more conservative about invalidating editable objects when the
role has not really changed.

Bug: 899676
Change-Id: I835bc9d087048fb17524b916c95fd5aa2aa9062b
Reviewed-on: https://chromium-review.googlesource.com/c/1352474
Commit-Queue: Aaron Leventhal <aleventhal@chromium.org>
Reviewed-by: Dominic Mazzoni <dmazzoni@chromium.org>
Cr-Commit-Position: refs/heads/master@{#613620}
Former-commit-id: 823e2488aed4db59bf40b69cf5dc8457da927ffe